--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   provider: ^6.1.2
   flutter_advanced_drawer: ^1.3.6
   font_awesome_icon_class: ^0.0.6
+  font_awesome_flutter: ^10.7.0
+  flutter_staggered_animations: ^1.1.1
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
