--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,8 +42,10 @@ dependencies:
   font_awesome_icon_class: ^0.0.6
   font_awesome_flutter: ^10.7.0
   flutter_staggered_animations: ^1.1.1
-  google_fonts: ^6.2.1
-  fl_chart: ^0.69.0
+  firebase_auth: ^4.16.0
+  firebase_core: ^2.24.2
+  flutter_svg: ^2.0.9
+  flutter_animate: ^4.5.0
 
 dev_dependencies:
   flutter_test:
