--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   firebase_core: ^2.24.2
   flutter_svg: ^2.0.9
   flutter_animate: ^4.5.0
+  cloud_firestore: ^4.14.0
+  google_sign_in: ^6.2.1
 
 dev_dependencies:
   flutter_test:
