--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <uses-permission android:name="android.permission.INTERNET" /> 
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-feature android:name="android.hardware.camera" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <application
         android:label="codestore"
         android:name="${applicationName}"
@@ -41,4 +44,10 @@
             <data android:mimeType="text/plain"/>
         </intent>
     </queries>
+    <queries>
+     <intent>
+      <action android:name="android.intent.action.VIEW" />
+      <data android:scheme="https" />
+     </intent>
+   </queries>
 </manifest>
