--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,30 @@ dependencies:
   flutter_animate: ^4.5.0
   cloud_firestore: ^4.14.0
   google_sign_in: ^6.2.1
+  flutter_web_auth: ^0.5.0
+  flutter_secure_storage: ^9.2.2
+  introduction_screen: ^3.1.14
+  lottie: ^3.1.2
+  url_launcher: ^6.3.0
+  android_intent_plus: ^5.1.0
+  image_picker: ^0.8.4+4
+  flutter_tesseract_ocr: ^0.4.20
+  pdf: ^3.6.0
+  path_provider: ^2.0.9
+  open_file: ^3.2.1
+  google_mlkit_text_recognition: ^0.13.0
+  webview_flutter: ^4.8.0
+  printing: ^5.13.2
+  permission_handler: ^11.3.1
+  firebase_messaging: ^14.7.10
+  file_picker: ^5.3.1
+  firebase_storage: ^11.2.2
+  cached_network_image: ^3.2.3
+  video_player: ^2.6.1
+  chewie: ^1.5.0
+  pdfx: ^2.3.0
+  just_audio: ^0.9.34
+  flutter_webrtc: ^0.9.48+hotfix.1
 
 dev_dependencies:
   flutter_test:
@@ -72,9 +96,11 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - 'assets/lottie/welcome.json'
+    - "assets/lottie/personalized_learning.json"
+    - 'assets/lottie/skill.json'
+    - 'assets/lottie/community.json'
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
