--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,13 +30,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   google_nav_bar: ^5.0.6
-  line_icons: ^2.0.3
+  line_icons: ^2.0.3 
   provider: ^6.1.2
   flutter_advanced_drawer: ^1.3.6
   font_awesome_icon_class: ^0.0.6
@@ -72,6 +68,7 @@ dependencies:
   pdfx: ^2.3.0
   just_audio: ^0.9.34
   flutter_webrtc: ^0.9.48+hotfix.1
+  table_calendar: ^3.1.2
 
 dev_dependencies:
   flutter_test:
